--- a/FOODGROUP.Rmd
+++ b/FOODGROUP.Rmd
@@ -3,3 +3,20 @@ title: "FOODGROUP"
 output: html_document
 ---
 
+
+```{r}
+library(tidyverse)
+
+
+
+file.info("FoodData.txt")
+
+FoodData <- haven::read_xpt("FoodData.txt")
+FoodData
+
+str(FoodData)
+names(FoodData)
+nrow(FoodData)
+
+```
+
